# npm-package-nlpengine

./: .gitattributes  .gitignore  .gitmodules  .npmignore  CMakeLists.txt  README.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: publish.yml  test.yml  update-analyzers.yml  update-nlp-engine.yml
lib/: cloud.js  index.js  load-binding.js
scripts/: install.js  stage-prebuild.js
src/: bindings.cpp
test/: _case.js  engine.test.js
